@@ -3,6 +3,10 @@ See the ChangeLog file for the details.
 
 Version 0.33
 
+  * bugfixes:
+    * signature wrapping would sometimes cause improper preparation of
+      DKIM signatures, with "simple" canonicalization (issue #2257046)
+
 
 Version 0.32 - released 2008-06-03
 
